feat(backend): agregar propiedad 'logged' a UserEntity y actualizar lógica de autenticación y controladores
