# backend/src/infrastructure/routes/users.route.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import { UserController } from '@/infrastructure/controllers/users.controller';
-import { CreateUserDto } from '@/application/dtos/users.dto';
+import { CreateUserDto, UpdateUserDto } from '@/application/dtos/users.dto';
 import { Routes } from '@interfaces/routes.interface';
 import { ValidationMiddleware } from '@/infrastructure/middlewares/validation.middleware';
 
@@ -14,10 +14,12 @@ export class UserRoute implements Routes {
   }
 
   private initializeRoutes() {
-    this.router.get(`${this.path}`, this.user.getUsers);
-    this.router.get(`${this.path}/:id(\\d+)`, this.user.getUserById);
-    this.router.post(`${this.path}`, ValidationMiddleware(CreateUserDto), this.user.createUser);
-    this.router.put(`${this.path}/:id(\\d+)`, ValidationMiddleware(CreateUserDto, true), this.user.updateUser);
-    this.router.patch(`${this.path}/:id(\\d+)/status/:status(true|false)`, this.user.updateStatus);
+    this.router.get(`${this.path}/all`, this.user.getUsers);
+    this.router.get(`${this.path}/by-id/:id(\\d+)`, this.user.getUserById);
+    this.router.post(`${this.path}/create`, ValidationMiddleware(CreateUserDto), this.user.createUser);
+    this.router.put(`${this.path}/update/:id(\\d+)`, ValidationMiddleware(UpdateUserDto, true), this.user.updateUser);
+    this.router.patch(`${this.path}/update-status/:id(\\d+)/:status(true|false)`, this.user.updateStatus);
+    this.router.patch(`${this.path}/change-password`, this.user.changePassword);
+    this.router.post(`${this.path}/import-from-excel`, this.user.importFromExcel);
   }
 }
