# backend/swagger.yaml
@@ -66,7 +66,7 @@ paths:
           description: 'Server Error'
 
 # [GET] users
-  /users:
+  /users/all:
     get:
       parameters:
       - name: search
@@ -93,6 +93,7 @@ paths:
         500:
           description: 'Server Error'
 
+  /users/create:
 # [POST] users
     post:
       tags:
@@ -116,7 +117,7 @@ paths:
           description: 'Server Error'
 
 # [GET] users/id
-  /users/{id}:
+  /users/by-id/{id}:
     get:
       tags:
       - users
@@ -135,6 +136,7 @@ paths:
         500:
           description: 'Server Error'
 
+  /users/update/{id}:
 # [PUT] users/id
     put:
       tags:
@@ -162,22 +164,52 @@ paths:
         500:
           description: 'Server Error'
 
-# [DELETE] users/id
-    delete:
+# [PATCH] users/id/status
+  /users/update-status/{id}/{status}:
+    patch:
       tags:
       - users
-      summary: Delete User By Id
+      summary: Update User Status By Id
       parameters:
       - name: id
         in: path
-        description: user Id
+        description: User Id
         required: true
         type: integer
+      - name: status
+        in: path
+        description: User Status
+        required: true
+        type: string
       responses:
         200:
           description: 'OK'
+        400:
+          description: 'Bad Request'
         409:
           description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  /users/change-password:
+    post:
+      tags:
+      - users
+      summary: Change Password
+      parameters:
+      - name: body
+        in: body
+        description: Change Password Data
+        required: true
+        schema:
+          $ref: '#/definitions/user-change-password'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
         500:
           description: 'Server Error'
 
@@ -465,6 +497,17 @@ definitions:
       name:
         type: string
       description:
+        type: string
+
+  user-change-password:
+    type: object
+    required:
+      - userName
+      - password
+    properties:
+      userName:
+        type: string
+      password:
         type: string
 
 # security definitions
